# Tumoroscope

./: README.md  pyproject.toml
Vignette/: Vignette.html  Vignette.ipynb
Vignette/.ipynb_checkpoints/: Vignette-checkpoint.ipynb
Vignette/Result_demo/: results_simulation_demo.txt
breast_tumoroscope_input/: C_tree_1.txt  F_tree_1.txt  breast_cell_count_annotation_new_version.txt  config_selected_spots_any_mutations_breast.json  ssm_data.txt
configs/: config_prostate.json  simulation_demo.json
demo/: demo01.ipynb
demo/.ipynb_checkpoints/: demo01-checkpoint.ipynb
prostate_tumoroscope_input/: C_tree_1.txt  F_tree_1.txt  config_prostate.json  prostate_cell_count_annotation.txt  ssm_data.txt
src/tumoroscope/: constants.py  pre_processing.py  run_simulation.py  run_tumoroscope.py  simulation.py  tumoroscope.py  visualization.py
