[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tumoroscope"
version = "0.0.5"
authors = [
  { name="Shadi Darvish Shafighi", email="shafighi@mimuw.edu.pl" },
]
description = "Tumoroscope"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy >= 1.20.3",
    "pandas >= 1.3.5",
    "matplotlib >= 3.1.2",
    "seaborn >= 0.9.0",
    "pickle5 >= 0.0.11",
    "scipy >= 1.7.3"
]
[project.urls]
"Homepage" = "https://github.com/szczurek-lab/Tumoroscope"
"Bug Tracker" = "https://github.com/szczurek-lab/Tumoroscope/issues"